# zhongguan-xinyuan-vr-sentiment

./: .gitattributes  .gitignore  README.md  evaluation.py  load_data.py  readme.txt  training_SVM.py
.ipynb_checkpoints/: Pipeline_SVM-checkpoint.ipynb  __init__-checkpoint.ipynb  load_data-checkpoint.ipynb  training_SVM-checkpoint.ipynb
BERT/: bert_all_in_one.py  best.pt  log.txt  seeDATA.py  test.py  test_bert.py  text_cleaning.py  usual_eval_labeled.txt
NLP_model_SVM/: Pipeline_SVM.ipynb  evaluation.py
ReviewSystem/: app.py  index.html  panorama.html  requirements.txt  test_yolo.py
ReviewSystem/model/: finetune.py  inference(emoji).py  (+2 more)
backend/: app.py  index.html  panorama.html  pyproject.toml  review.json  run.sh  settings.py  test_yolo.py
backend/static/: custom.css  data.json  default.css  pannellum.js  style.css
backend/templates/: index.html  panorama.html
backend/test/: test_yolo.py
graphs/: pyproject.toml  xy_to_pitch_yaw.py
models/: pyproject.toml
models/bert/: bert_all_in_one.py  best.pt  log.txt  seeDATA.py  test.py  test_bert.py  text_cleaning.py  usual_eval_labeled.txt
models/bert/data_set/data_set1/eval_data/: usual_eval.txt
models/bert/data_set/data_set1/test_data/raw/: virus_test_labeled.xlsx
models/roberta/: best.pt  finetune.py  inference(emoji).py  inference2.py  text_cleaning.py
models/roberta/torchboard/: events.out.tfevents.1764726491.994d91445c2b.660.0
models/svm/: Pipeline_SVM.ipynb  Self_Test.ipynb  load_data.py  settings.py  training_SVM.py
models/svm/datasets/test/raw/: usual_test.txt
settings/: settings.py
(+20 files in other folders)
