[project]
name = "reviewsystem"
version = "0.0.0"
description = "文本挖掘、机器学习（系统可视）"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "granian>=2.6.0",
    "hf-xet>=1.2.0",
    "opencv-python>=4.12.0.88",
    "transformers>=4.57.3",
    "ultralytics>=8.3.234",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
