[project]
name = "models"
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
    "harvesttext>=0.8.2.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "zhconv>=1.4.3",
]
